# fh-mahjong

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  official_rules.md  package-lock.json  rules.md  tasks.md  technical_design.md  test_hand.go  user_guide.md  vercel.json  zeabur.json
ai/: AGENTS.md  Dockerfile  README.md  pyproject.toml
ai/checkpoints/: best-checkpoints.json
ai/src/fh_mahjong_ai/: __init__.py  action_catalog.py  bridge.py  buffer.py  checkpoint_manifest.py  config.py  data.py  env.py  evaluate.py  mlflow_tracking.py  model.py  paired_trace.py  policies.py  reward_calibration.py  risk_filter.py  serving.py  storage.py  trainer.py  types.py
ai/src/fh_mahjong_ai/scripts/: __init__.py  build_counterfactual_risk_data.py  convert_data.py  evaluate.py  evaluate_guarded.py  evaluate_risk_guarded.py  evaluate_tail_constrained.py  generate_data.py  generate_selfplay.py  model_config_args.py  paired_trace.py  reload_policy.py  reward_calibration.py  run_pipeline.py  selfplay_smoke.py  serve_policy.py  serving_smoke.py  train_action_risk.py  train_awbc.py  train_bc.py  train_iql.py  train_offline_q.py
ai/tests/: test_action_catalog.py  test_awbc.py  test_bridge.py  test_buffer.py  test_build_counterfactual_risk_data.py  test_checkpoint_manifest.py  test_data.py  test_evaluate.py  test_generate_data.py  test_generate_selfplay.py  test_iql.py  test_model.py  test_offline_q.py  test_paired_trace.py  test_pipeline_e2e.py  test_policies.py  test_reload_policy.py  test_reward_calibration.py  test_risk_filter.py  test_serving.py  test_storage.py  test_train_action_risk.py  test_train_bc.py
api/: AGENTS.md  auth.go  calc.go  calc_test.go  client.go  matchmaker.go  middleware.go  paipu.go  private_match_state_test.go  private_table_test.go  private_tables.go  private_tables_test.go  rl_agent_test.go  room.go  room_bot_test.go  room_remote_test.go  server.go  server_test.go  shanten.go  ws.go
bot/: AGENTS.md  factory.go  factory_test.go  heuristic.go  heuristic_test.go
cmd/: AGENTS.md
cmd/cli/: main.go  (+1 more)
core/: AGENTS.md  dump_test.go  flower_auto_reveal_test.go  game.go  game_test.go  mt19937.go  mt19937_test.go  paipu.go  paipu_test.go  rules.go
docs/: AGENTS.md
models/: AGENTS.md  db.go
proto/: AGENTS.md  game.pb.go  game.proto
rlenv/: AGENTS.md  action.go  action_test.go  env.go  env_test.go  observation.go
rules/: AGENTS.md  fh.go  fh_test.go
web/: .env.example  AGENTS.md  embed.go  index.html  package-lock.json  package.json  vite.config.ts  zeabur.json
(+145 files in other folders)
