[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fh-mahjong-ai"
version = "0.1.0"
description = "Python RL training stack for Fenghua Mahjong"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mlflow>=3.0",
  "numpy>=2.0",
  "protobuf>=5.0",
  "torch>=2.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
fh-mj-selfplay-smoke = "fh_mahjong_ai.scripts.selfplay_smoke:main"
fh-mj-generate-data = "fh_mahjong_ai.scripts.generate_data:main"
fh-mj-convert-data = "fh_mahjong_ai.scripts.convert_data:main"
fh-mj-train-bc = "fh_mahjong_ai.scripts.train_bc:main"
fh-mj-train-awbc = "fh_mahjong_ai.scripts.train_awbc:main"
fh-mj-train-iql = "fh_mahjong_ai.scripts.train_iql:main"
fh-mj-train-offline-q = "fh_mahjong_ai.scripts.train_offline_q:main"
fh-mj-evaluate = "fh_mahjong_ai.scripts.evaluate:main"
fh-mj-reward-calibration = "fh_mahjong_ai.scripts.reward_calibration:main"
fh-mj-pipeline = "fh_mahjong_ai.scripts.run_pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
